Changes in v1.4 (6/27/2002)

- Added separate configuration for a SETUPLDR version

Changes in v1.3.1 (6/8/2002)

- Implemented MmAllocateMemoryAtAddress()
- Fixed Linux boot code to go through the memory manager to allocate memory at 1MB

Changes in v1.3 (6/5/2002)

- Added protected mode exception handling in case FreeLoader crashes
- Reworked memory manager to use all of extended memory
- Reworked UI code, now supports multiple text-mode resolutions

Changes in v1.2.2 (5/4/2002)

- Fixed memory leak in menu.c

Changes in v1.2.1 (5/3/2002)

- Makefile updates
- Optimized the Makefile
- Removed recursive make functionality (builds much faster now)
- Places all output into one single directory
- Added automagically generated dependencies

Changes in v1.2 (4/30/2002)

- All Linux kernels are supported (zImage & bzImage, loaded high & low)
- Initrd support
- FreeLoader now compiles under Mingw32 instead of just DJGPP, but
  the Mingw32 linker seems to output a corrupt binary.

Changes in v1.01 (4/28/2002)

- Fixed FAT short file name buffer overflow that was causing
  some long filenames not to work correctly.

Changes in v1.0 (4/24/2002)

- FreeLoader version 1.0!
- Supports booting ReactOS
- Supports booting Linux bzImage kernels
- No initrd support (yet)
- No zImage support (yet)
- No ext2 file system support (yet)
- Supports FAT & ISO-9660 file systems
- Forward slashes '/' as well as backslashes '\' can be used
  for path names in FAT & ISO-9600
- Fixed bug in LBA code where it was only reading one sector
  even if you asked for more
- Fixed bug in FAT code, was also present in ISO-9660 code where
  it wasn't incrementing the buffer address correctly